--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -158,12 +158,10 @@
 
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div>
-            <h2>Encontranos en nuestra oficina!</h2>
+            <h2>Encontranos en nuestras redes!</h2>
 
             <p>
-              Si deseas asesoría turística personalizada, podés acercarte a
-              nuestra oficina en San Miguel de Tucumán de lunes a viernes de
-              17 hs a 21 hs
+              Si deseas asesoría turística personalizada, podés contactarnos personalmente via redes sociales!
             </p>
           </div>
 
