--- a/pages/entradas/tilcara.html
+++ b/pages/entradas/tilcara.html
@@ -116,7 +116,7 @@
 
       <i class="fa-solid fa-pen pt-1 ps-3 pe-2"></i>
       <a href="/pages/404.html">
-        <h6 class="pt-1 text-secondary">Francisco Iturburu</h6>
+        <h6 class="pt-1 text-secondary">Jose Rafael</h6>
       </a>
     </div>
 
