--- a/pages/entradas/villaPehuenia.html
+++ b/pages/entradas/villaPehuenia.html
@@ -117,7 +117,7 @@
 
       <i class="fa-solid fa-pen pt-1 ps-3 pe-2"></i>
       <a href="/pages/404.html">
-        <h6 class="pt-1 text-secondary">Erick Pipke Ronan</h6>
+        <h6 class="pt-1 text-secondary">Erick Pipke</h6>
       </a>
     </div>
 
@@ -294,7 +294,7 @@
         </div>
 
         <div class="col-11 py-3 row">
-          <h6>Franco Armanino</h6>
+          <h6>Leandro paredes</h6>
           <p>
             Como su nombre lo indica, ni bien llegas te deleita sus aguas
             calmas y cristalinas, su color turquesa y verdoso, abrazadas por
@@ -327,7 +327,7 @@
         </div>
 
         <div class="col-11 py-3 row">
-          <h6>Lucas Leguizamon</h6>
+          <h6>Lionel messi</h6>
           <p>
             Un hermoso lugar para pasar la tarde a las orillas del lago y
             relajarse. Gracias por la recomendación nos encantó el lugar.
@@ -356,7 +356,7 @@
         </div>
 
         <div class="col-11 py-3 row">
-          <h6>Facundo Maiello</h6>
+          <h6>Rogrido de paul</h6>
           <p>
             Recorrido turístico por excelencia de Villa Pehuenia. Ofrece un
             muestrario de todos los atractivos de la zona, pero recomiendo
