--- a/pages/entradas/peninsulaValdes.html
+++ b/pages/entradas/peninsulaValdes.html
@@ -117,7 +117,7 @@
 
       <i class="fa-solid fa-pen pt-1 ps-3 pe-2"></i>
       <a href="/pages/404.html">
-        <h6 class="pt-1 text-secondary">Jose Mariano Guaraz Balcazar</h6>
+        <h6 class="pt-1 text-secondary">Facundo maiello</h6>
       </a>
     </div>
 
